--- a/templates/slidetemplate.html
+++ b/templates/slidetemplate.html
@@ -1,14 +1,17 @@
 	<script type="text/html" id='slide_template'>
-	<div class='slide-nav'>
-		<div class='slide-left' data-direction='left'><p>&lt;&lt; Back</p></div>
-		
-		<div class='slide-right' data-direction='right'></div>
-		<div id='slide_index'></div>
-	</div>
-	<div id='slide_wrapper'>
-		<div id='slide_container'>
-		</div>
-		<div id='level_container'></div>
-	</div>
+	<div class='lesson-holder'>
+		<div class='slide-nav'>
+			<div class='slide-left' data-direction='left'><p>&lt;&lt; Back</p></div>
 
+			<div id='slide_index'></div>
+		</div>
+		<div id='slide_wrapper'>
+			<div id='slide_container'>
+			</div>
+			<div id='level_container'></div>
+		</div>
+		<div class='slide-footer'>
+			<div class='slide-right' data-direction='right'>NEXT</div>
+		</div>
+	</div>
 	</script>
