--- a/templates/problemtemplate.html
+++ b/templates/problemtemplate.html
@@ -1,31 +1,27 @@
 	<script type="text/html" id='problem_template'>
-
-	<div class='problem-nav'>
-		<div class='relative'>
-			<span id='answer_question'>Answer Question!</span>
+	<div class='problem-holder'>
+		<div class='problem-nav'>
+			<div class='relative'>
+				<div id='answer_question'>Answer Question!</div>
+			</div>
+			<div class='fleft'>
+				<div id='counter_container'>Attempts: </div>
+				<div id='attempt_counter'>0</div>
+			</div>
+			
+			<div id='answer_result'></div>
+			<div id='slide_index'></div>
 		</div>
 
-		<div id='attempt_counter'>0</div>
-		<div id='counter_container'>Attempts: </div>
-		<div id='answer_result'></div>
-		<div id='slide_index'></div>
-
-
-	</div>
-	<div id='answer_container' class='hidden'>
-			<div id='answer_categories'></div>
-			<div id='answer_options'></div>
-
-
+		<div id='answer_container' class='hidden'>
+				<div id='answer_categories'></div>
+				<div id='answer_options'></div>
 		</div>
-	<div id='slide_wrapper' class='problem-wrapper'>
-		<div id='slide_container'>
-		</div>
-		<div id='level_container'></div>
-	</div>
 
+		<div id='slide_wrapper' class='problem-wrapper'>
+			<div id='slide_container'></div>
+			<div id='level_container'></div>
+		</div>
+	<div>
 	</script>
 
-
-<!-- 				// <div id='correct'><h1>Correct!</h1></div>
-			// <div id='incorrect'><h1>incorrect</h1></div> -->
