--- a/templates/problemtemplate.html
+++ b/templates/problemtemplate.html
@@ -5,7 +5,7 @@
 				<div id='answer_question'>Answer Question!</div>
 			</div>
 			<div class='fleft'>
-				<div id='counter_container'>Attempts: </div>
+				<div id='counter_container'>ATTEMPTS: </div>
 				<div id='attempt_counter'>0</div>
 			</div>
 			
