--- a/public/css/main.css
+++ b/public/css/main.css
@@ -995,6 +995,7 @@ body {
 	display:block;
 	margin: 60px auto;
 	text-align: center;
+/*	font-family: 'Georgia';*/
 }
 
 .option-txt {
@@ -1009,7 +1010,7 @@ body {
 }
 
 .option-hover {
-	background-color: #417ffd;
+	background-color: rgba(65, 127, 253, 0.56);
 	color:white;
 }
 
@@ -1020,6 +1021,36 @@ body {
 	font-size: 13px;
 	text-align: center;
 }
+
+.option-submit {
+	float:left;
+	width:960px;
+}
+
+#submit_option {
+	float:right;
+	padding:10px 20px;
+	background-color: rgb(214, 214, 214);
+	color:rgb(116, 115, 115);
+	margin:20px 120px;
+	border-radius: 15px;
+	font-weight: bold;
+}
+
+.active-option {
+	background-color: #417ffd;
+	color:white;
+}
+
+.active-submit-option {
+	background-color: green !important;
+	color:white !important;
+}
+
+.active-submit-option:hover {
+	background-color: rgba(0, 128, 0, 0.63) !important;
+}
+
 
 /* -------------------------------------------------- */
 
