--- a/public/css/index.css
+++ b/public/css/index.css
@@ -196,3 +196,89 @@ input:hover, input:focus, {
 	background: -moz-linear-gradient(top, #FFFFFF, #D8D8D8 1px, #FFFFFF 25px);
 	}*/
 
+#top_wrapper {
+	width:100%;
+	height:270px;
+	background-color: #9d9d9d;
+	float:left;
+}
+
+#learn_mid_wrapper {
+	width:100%;
+	height:270px;
+	background-color: #FFDAA3;
+	float:left;
+}
+
+.two-third {
+	width:640px;
+	float:left;
+}
+
+.one-third {
+	width:320px;
+	float:right;
+	background-color: rgba(202, 209, 215, 0.39);
+	height:320px;
+	box-shadow:3px 2px 2px #B3B3B3;
+	margin-top:40px;
+}
+
+.perk-card:last-child {
+	margin-bottom: 40px;
+}
+
+.perk-card {
+	padding:40px 20px 0 0;
+}
+.perk-card h3 {
+	font-size: 23px;
+	color: #083898;
+	font-style: italic;
+	padding: 0;
+	margin:0;
+
+}
+
+.perk-card p {
+	padding:10px 120px 10px 20px;
+	font-size: 17px;
+	margin: 0;
+}
+
+.free-month-wrapper {
+	width:320px;
+	float:left;
+	margin: 0 0 20px 0;
+	padding:20px 0;
+	color:white;
+	font-size: 23px;
+	text-align: center;
+	background-color: rgba(8, 56, 152, 0.72);
+}
+
+.free-month-dialogue {
+	float:left;
+	width:280px;
+	padding:20px 10px;
+	margin:25px 10px;
+	background-color: white;
+	box-shadow: 2px 2px 2px #CCCCCC;
+	border-radius: 15px;
+	font-size: 17px;
+	text-align: center;
+}
+
+.sign-up-free-month {
+	background-color: rgb(218, 48, 48);
+	padding:15px 0;
+	width:160px;
+	color:white;
+	font-weight: bold;
+	float:left;
+	margin: 15px 80px 0px 80px;
+	text-align: center;
+	box-shadow: 2px 2px 2px #CCCCCC;
+	border-radius: 20px;
+	font-size: 23px;
+}
