--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1097,13 +1097,14 @@ body {
 /* ------------- class list --------------------- */
 
 .classroom-card {
-	max-width:450px;
-	min-width:250px;
+	width:410px;
 	height:250px;
-	margin:20px 0 20px 20px;
+	margin:34px;
 	background-color: #FFFFFF;
 	border: 1px solid #58595b;
+	border-radius: 10px;
 	float:left;
+	box-shadow: 3px 3px 3px #B6B6B6;
 }
 
 .classroom-card h3 {
@@ -1112,14 +1113,17 @@ body {
 	text-align: center;
 	/*font-weight: bold;*/
 	color:white;
-	width:450px;
+	width:240px;
+	float:left;
 	background-color: #58595b;
 	padding:8px 0;
 	margin:0;
+	border-radius: 8px;
 }
 
 .classroom-card p {
-	padding:0 15px;
+	padding:20px;
+	margin-top: 40px;
 	line-height: 26px;
 }
 
@@ -1129,7 +1133,6 @@ body {
 
 .classroom-card-list {
 	float:left;
-	border-left:16px solid #989abc;
 	height:100%;
 }
 
@@ -1141,11 +1144,15 @@ body {
 }
 
 .classroom-card-list > h3 {
-	margin:20px;
+	margin: 70px 120px 0 120px;
+	border-bottom: 1px solid rgb(143, 143, 143);
 	padding-left: 20px;
 	font-size: 23px;
 	font-family: Georgia;
 	font-weight: normal;
+	width: 720px;
+	text-align: center;
+	padding: 0 0 5px 0;
 }
 
 /* --------------------- SUBNAV --------------------- */
