battery images now rendering according to how many lessons, problems, and tests have been completed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1131,6 +1131,12 @@ body {
 	font-size: 13px;
 }
 
+.battery {
+	float:right;
+	margin-right: 20px;
+	opacity: .7;
+}
+
 .classroom-card-list {
 	float:left;
 	height:100%;
