--- a/public/css/main.css
+++ b/public/css/main.css
@@ -498,7 +498,8 @@ body {
 	color:white;
 	font-style: normal;
 	font-weight: bold;
-	opacity: .8;
+	opacity: .7;
+	font-size: 14px;
 }
 
 .activity-list {
