--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,7 +16,9 @@
 	color: #FFFFFF;
 	cursor:pointer;
 	}
-
+body {
+	background-color: rgba(185, 185, 185, 0.44) !important;
+}
 
 #sign_in:hover {
 	background-color: #535CAB;
@@ -33,7 +35,7 @@
 
 #sign_in_form {
 	font-size: 13px;
-	margin:15px 0 0 0;
+	margin:10px 0 0 0;
 	
 }
 
@@ -132,14 +134,13 @@
 }
 
 .tagline {
-	font-size: 30px;
-	width:960px;
+	font-size: 23px;
 	color:#150246;
 	padding:0;
-	margin:20px 0;
+	margin:50px 0 30px 30px;
 	font-family: Georgia;
-	text-align: center;
-
+	clear:left;
+	font-style: italic;
 	font-weight: normal;
 
 }
@@ -289,14 +290,18 @@ input:hover, input:focus, {
 }
 
 .header-tall {
-	height:120px !important;
+	height:160px !important;
 }
 
 .header-tall h1 {
-	font-size: 56px !important;
 	margin:30px 0 0 0 !important;
 }
 
 .header-tall .header-nav {
 	margin-top:30px;
+	height:25px;
+
+}
+.margin-top40 {
+	margin-top: 40px;
 }
