ready to build report card page. datahas been manipulated to serve relevant insights. tagging system nailed down. fixed issue with problem tags not updating

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1304,6 +1304,7 @@ body {
 	clear:right;
 	font-size:71px;
 	font-weight: bold;
+	color:rgb(119, 119, 119);
 }
 
 .test-result-footer {
@@ -1316,10 +1317,15 @@ body {
 
 .review-test {
 	float:left;
+	color:blue;
 }
 
 .finish-test {
-	float:right;
+	float: right;
+	padding: 8px 30px;
+	background-color: green;
+	border-radius: 5px;
+	color: white;
 }
 
 .result-img {
