--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1332,3 +1332,48 @@ body {
 	height:25px;
 	margin:20px 0;
 }
+
+.report-card-holder {
+	float:left;
+	width:720px;
+	margin: 0 70px;
+}
+
+.report-card-holder h3 {
+	width:640px;
+	margin:0 40px;
+	border-bottom: 1px solid #CCCCCC;
+	text-align: center;
+	font-size: 23px;
+	padding:15px 0;
+	float:left;
+}
+
+.skill-category {
+	width:640px;
+	margin:0 40px;
+	padding:15px 0;
+	float:left;
+}
+
+.skill-category p {
+	float:left;
+	margin:0;
+}
+
+.progress-container {
+	width: 300px;
+	background-color: rgb(219, 219, 219);
+	height: 20px;
+	border-radius: 10px;
+	float: right;
+	box-shadow: 2px 2px 2px #CCCCCC;
+}
+
+.progress-green {
+	width:0;
+	background-color: rgb(0, 196, 0);
+	height:20px;
+	border-radius: 10px;
+	box-shadow: 2px 2px 2px #CCCCCC;
+}
