--- a/public/css/index.css
+++ b/public/css/index.css
@@ -15,9 +15,10 @@
 	font-size: 14px;
 	color: #FFFFFF;
 	cursor:pointer;
-	}
+}
+
 body {
-	background-color: rgba(185, 185, 185, 0.44) !important;
+	background-color: rgba(250, 255, 187, 0.44) !important;
 }
 
 #sign_in:hover {
@@ -224,11 +225,8 @@ input:hover, input:focus, {
 
 .one-third {
 	width:320px;
-	float:right;
-	background-color: rgba(202, 209, 215, 0.39);
-	height:320px;
-	box-shadow:3px 2px 2px #B3B3B3;
-	margin-top:40px;
+	float:left;
+/*	margin-top:40px;*/
 }
 
 .perk-card:last-child {
@@ -236,57 +234,25 @@ input:hover, input:focus, {
 }
 
 .perk-card {
-	padding:40px 20px 0 0;
+	padding:20px;
+
+	text-align: center;
 }
 .perk-card h3 {
-	font-size: 23px;
+	font-size:23px;
 	color: #083898;
 	padding: 0;
-	margin:0;
+	margin:20px 0;
+	font-family: Georgia;
+	font-weight: normal;
+	font-style: italic;
 
 }
 
 .perk-card p {
-	padding:10px 120px 10px 20px;
 	font-size: 17px;
 	margin: 0;
-}
-
-.free-month-wrapper {
-	width:320px;
-	float:left;
-	margin: 0 0 20px 0;
-	padding:20px 0;
-	color:white;
-	font-size: 23px;
-	text-align: center;
-	background-color: rgba(8, 56, 152, 0.72);
-}
-
-.free-month-dialogue {
-	float:left;
-	width:280px;
-	padding:20px 10px;
-	margin:25px 10px;
-	background-color: white;
-	box-shadow: 2px 2px 2px #CCCCCC;
-	border-radius: 15px;
-	font-size: 17px;
-	text-align: center;
-}
-
-.sign-up-free-month {
-	background-color: rgb(218, 48, 48);
-	padding:15px 0;
-	width:160px;
-	color:white;
-	font-weight: bold;
-	float:left;
-	margin: 15px 80px 0px 80px;
-	text-align: center;
-	box-shadow: 2px 2px 2px #CCCCCC;
-	border-radius: 20px;
-	font-size: 23px;
+	line-height: 1.5em;
 }
 
 .header-tall {
